--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,127 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="7dp"
-        >
-        <EditText
-            android:id="@+id/editDisplay"
-            android:inputType="text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="end"
-            android:textSize="50sp"
-            android:hint="@string/digit_null"
+    android:layout_height="match_parent">
 
-            />
+    <EditText
+        android:id="@+id/editDisplay"
+        android:inputType="text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:textSize="50sp"
+        android:hint="@string/digit_null"
+    />
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/editDisplay">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="60dp"
-            android:layout_below="@id/editDisplay"
+            android:orientation="horizontal"
             >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <Button
-                    android:id="@+id/buttonC"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_cancel"/>
-                <Button
-                    android:id="@+id/button0"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_null"/>
-                <Button
-                    android:id="@+id/buttonEnter"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_equal"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <Button
-                    android:id="@+id/button7"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_seven"/>
-                <Button
-                    android:id="@+id/button8"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_eight"/>
-                <Button
-                    android:id="@+id/button9"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_nine"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <Button
-                    android:id="@+id/button4"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_four"/>
-                <Button
-                    android:id="@+id/button5"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_five"/>
-                <Button
-                    android:id="@+id/button6"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_six"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <Button
-                    android:id="@+id/button1"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_one"/>
-                <Button
-                    android:id="@+id/button2"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_two"/>
-                <Button
-                    android:id="@+id/button3"
-                    style="@style/calc_buttons"
-                    android:text="@string/digit_three"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
-                <Button
-                    android:id="@+id/buttonPlus"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_plus"/>
-                <Button
-                    android:id="@+id/buttonMinus"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_minus"/>
-                <Button
-                    android:id="@+id/buttonMulty"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_multiplication"/>
-                <Button
-                    android:id="@+id/buttonDivided"
-                    style="@style/calc_buttons"
-                    android:text="@string/sign_division"
-                    />
-            </LinearLayout>
+            <Button
+                android:id="@+id/button1"
+                style="@style/calc_buttons"
+                android:text="@string/digit_one"/>
+            <Button
+                android:id="@+id/button2"
+                style="@style/calc_buttons"
+                android:text="@string/digit_two"/>
+            <Button
+                android:id="@+id/button3"
+                style="@style/calc_buttons"
+                android:text="@string/digit_three"/>
         </LinearLayout>
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/button4"
+                style="@style/calc_buttons"
+                android:text="@string/digit_four"/>
+            <Button
+                android:id="@+id/button5"
+                style="@style/calc_buttons"
+                android:text="@string/digit_five"/>
+            <Button
+                android:id="@+id/button6"
+                style="@style/calc_buttons"
+                android:text="@string/digit_six"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/button7"
+                style="@style/calc_buttons"
+                android:text="@string/digit_seven"/>
+            <Button
+                android:id="@+id/button8"
+                style="@style/calc_buttons"
+                android:text="@string/digit_eight"/>
+            <Button
+                android:id="@+id/button9"
+                style="@style/calc_buttons"
+                android:text="@string/digit_nine"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/buttonC"
+                style="@style/calc_buttons"
+                android:text="@string/sign_cancel"/>
+            <Button
+                android:id="@+id/button0"
+                style="@style/calc_buttons"
+                android:text="@string/digit_null"/>
+            <Button
+                android:id="@+id/buttonEnter"
+                style="@style/calc_buttons"
+                android:text="@string/sign_equal"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/buttonPlus"
+                style="@style/calc_buttons"
+                android:text="@string/sign_plus"/>
+            <Button
+                android:id="@+id/buttonMinus"
+                style="@style/calc_buttons"
+                android:text="@string/sign_minus"/>
+            <Button
+                android:id="@+id/buttonMulty"
+                style="@style/calc_buttons"
+                android:text="@string/sign_multiplication"/>
+            <Button
+                android:id="@+id/buttonDivided"
+                style="@style/calc_buttons"
+                android:text="@string/sign_division"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
